Fixup warnings due to deprecated URL constructor (in Examples only)